# TTQuant

./: .env.example  .env.production  .env.test  .gitignore  CURRENT_STATUS.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DASHBOARD_READY.md  EMA_OPTIMIZATION_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_NOW.md  MONITORING_REPORT.md  Makefile  OKX_MODE_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PHASE1_LOOKAHEAD_BIAS_FIXES.md  PROJECT_SUMMARY.md  PROXY_SETUP_SUMMARY.md  QUICKSTART.md  QUICKSTART_OKX.md  README.md  RISK_BACKTEST_RESULTS.md  RISK_MANAGEMENT_COMPLETE.md  STRATEGY_ENGINE_GUIDE.md  STRATEGY_OPTIMIZATION.md  SUCCESS_OKX.md  VERIFICATION_CHECKLIST.md  auto-config-proxy.ps1  check-okx-status.ps1  check-okx.bat  check-proxy-ip.ps1  deploy-vps.sh  deploy.sh  docker-compose.test.yml  start-okx.ps1  test_okx_conn.py  update-proxy-ip.ps1  update-proxy-port.ps1  启动模拟交易.bat  实施完成总结.md  (+3 more)
config/: markets.prod.toml  markets.toml  ml_strategy_config.yaml  prometheus.yml  risk.prod.toml  risk.toml  strategies.optimized.toml  strategies.risk.toml  strategies.toml  strategies.v2.toml  test.yaml
deploy/: CHECKLIST.md  COMPLETION_REPORT.md  INDEX.md  QUICKSTART.md  README.md  START_HERE.md  SUMMARY.md  ec2-deploy-minimal.sh  ec2-deploy.sh  ec2-setup.sh  sync-to-ec2.bat  sync-to-ec2.sh  verify-okx.sh
docker/: .env.local  .env.server  Dockerfile.proxy  Dockerfile.python  Dockerfile.rust  ENV_CONFIG.md  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.yml
docs/: ADVANCED_FEATURES.md  AWS_SECURITY_GROUP_SETUP.md  BACKTEST_IMPLEMENTATION.md  BACKTEST_QUICKSTART.md  BINANCE_ACCESS_ISSUE.md  CLASH_ALLOW_LAN_GUIDE.md  CLASH_PROXY_GUIDE.md  CLASH_SETUP_GUIDE.md  DASHBOARD_IMPORT.md  DEPLOYMENT_QUICKREF.md  DOCKER.md  DOCKER_INSTALLATION.md  DOCKER_PROXY.md  E2E_TEST_REPORT.md  FINAL_TEST_REPORT.md  GATEWAY.md  GATEWAY_IMPLEMENTATION_SUMMARY.md  GATEWAY_TEST_REPORT.md  GRAFANA_GUIDE.md  HYBRID_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_REPORT.md  LOCAL_DOCKER_SUCCESS_REPORT.md  LOCAL_DOCKER_TEST_REPORT.md  MANUAL_IMPORT_DASHBOARD.md  ML_FACTOR_GUIDE.md  MONITORING.md  MONITORING_IMPLEMENTATION.md  MONITORING_QUICKREF.md  MONITORING_REPORT.md  OKX_API_SETUP.md  OKX_INTEGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOY.md  PROGRESS.md  PROJECT_COMPLETION_REPORT.md  PROXY_TROUBLESHOOTING.md  QUICKSTART.md  QUICK_START.md  RISK_MANAGEMENT.md  SYSTEM_STATUS_REPORT.md  (+11 more)
monitoring/: README.md  alertmanager.yml  alerts.yml  okx-dashboard.json  okx-simple.json  okx-test.json  prometheus.yml  simple-dashboard.json  strategy-dashboard.json  system-dashboard.json  ttquant-dashboard.json
python/: .dockerignore  Dockerfile  backtest_real_data.py  backtest_transformer_real_data.py  demo_backtest.py  example_quick_demo.py  example_strategy_development.py  requirements.txt  risk_monitor.py  run_backtest.py  run_backtest_all.py  run_backtest_risk_comparison.py  run_backtest_risk_comparison_v2.py  run_strategy_engine.py  simulate_system.py  test_attribution.py  test_backtest.py  test_database.py  test_e2e.py  test_e2e_flow.py  test_e2e_okx.py  test_e2e_quick.py  test_gateway.py  test_gateway_direct.py  test_hybrid.py  test_integration.py  test_market_data.py  test_ml_factor.py  test_okx.py  test_okx_simple.py  test_portfolio_optimizer.py  test_real_gateway.py  test_risk_management.py  test_simple_integration.py  test_strategy.py  train_improved_model.py  train_ml_factor.py  train_ml_with_real_data.py  train_transformer_with_real_data.py  transformer_backtest_results.json
rust/: Cargo.toml
rust/common/: Cargo.toml  build.rs
rust/common/proto/: trade.proto
rust/common/src/: config.rs  database.rs  lib.rs  symbol.rs  time.rs  zmq_wrapper.rs
rust/gateway/: Cargo.toml
rust/gateway/src/: main.rs  metrics.rs  order_manager.rs  risk.rs
rust/gateway/src/exchange/: binance.rs  mod.rs  okx.rs
rust/market-data/: Cargo.toml
rust/market-data/src/: binance.rs  main.rs  metrics.rs  okx.rs
scripts/: backup.sh  check-md-okx.sh  check_clash.bat  check_node.sh  deploy_test.sh  monitoring.sh  query-market-data.sh  run-backtest.sh  server_deploy.sh  setup-grafana.sh  start-strategy-engine.sh  start-trading.sh  test_monitoring.sh  (+1 more)
sql/: init.sql
(+49 files in other folders)
