[package]
name = "ttquant-common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
zmq.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
prost-types.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[build-dependencies]
prost-build = "0.12"
