[package]
name = "ttquant-market-data"
version.workspace = true
edition.workspace = true

[[bin]]
name = "market-data"
path = "src/main.rs"

[dependencies]
ttquant-common = { path = "../common" }
tokio.workspace = true
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
bumpalo.workspace = true
futures-util = "0.3"
url = "2.5"
